Documentation edits made through Mintlify web editor

--- a/app-builder/builder/support.mdx
+++ b/app-builder/builder/support.mdx
@@ -6,8 +6,19 @@ icon: "comments-question"
 
 ## **8.1. Kênh hỗ trợ**
 
-- Bước 1: Người dùng nhấn vào biểu tượng **Zalo** ở góc dưới bên trái
-- Bước 2: Người dùng chọn "Chat nhanh" để chat trực tiếp tại đây hoặc "Chat bằng Zalo" để mở nền tảng Zalo
+<Steps>
+
+  <Step title="Mở biểu tượng Zalo">
+    Người dùng nhấn vào biểu tượng **Zalo** ở góc **dưới bên trái** của màn hình.
+  </Step>
+
+  <Step title="Chọn hình thức trò chuyện">
+    Người dùng chọn **“Chat nhanh”** để trò chuyện **trực tiếp tại đây**,  
+    hoặc chọn **“Chat bằng Zalo”** để **mở nền tảng Zalo** và tiếp tục trò chuyện.
+  </Step>
+
+</Steps>
+
 
 <Frame caption=" ">
   <img
