Documentation edits made through Mintlify web editor

--- a/app-builder/builder/pages/minigame-page.mdx
+++ b/app-builder/builder/pages/minigame-page.mdx
@@ -77,7 +77,15 @@ icon: "circle-user"
 
 **Nền**
 
-- Chọn màu nền cho tiêu đề game bằng cách nhấn ô vuông ![][image120]sau đó chọn màu
+- Chọn màu nền cho tiêu đề game bằng cách nhấn ô vuông sau đó chọn màu
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image263_c118d867fd.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
   - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
     - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
   - **Hiển thị tiêu đề:**
@@ -93,7 +101,15 @@ icon: "circle-user"
 </Frame>
 
 - **Kích thước/ Màu sắc**:
-  - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần game tại ![][image125]
+  - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần game tại
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image264_7b15803934.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - **Hiển thị Phần thưởng**:
   - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có phần thưởng và không có phần thưởng
 - **Hiển thị Hướng dẫn**:
@@ -108,26 +124,54 @@ icon: "circle-user"
 
 Người dùng có thể điều chỉnh vị trí tại
 
-**![][image183]**
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image265_7a71efdfad.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 **Màu nền phần thưởng 1**
 
-Chọn màu nền cho phần thưởng 1 bằng cách nhấn ô vuông ![][image120]sau đó chọn màu
-
+Chọn màu nền cho phần thưởng 1 bằng cách nhấn ô vuông sau đó chọn màu
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image266_4970e9eb94.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
   - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 
 **Màu viền vòng quay**
 
-Chọn màu viền vòng quay bằng cách nhấn ô vuông ![][image120]sau đó chọn màu
-
+Chọn màu viền vòng quay bằng cách nhấn ô vuông sau đó chọn màu
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image267_3bab5b23c8.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
   - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 
 **Nút quay**
 
-Chọn màu nút quay bằng cách nhấn ô vuông ![][image120]sau đó chọn màu
-
+Chọn màu nút quay bằng cách nhấn ô vuông sau đó chọn màu
+<Frame caption="">
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền nút quay bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
   - Xóa màu nút quay bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
   - **Liên kết banner chia sẻ game**
