Documentation edits made through Mintlify web editor

--- a/app-builder/builder/pages/category-page.mdx
+++ b/app-builder/builder/pages/category-page.mdx
@@ -249,27 +249,32 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
 **Lề ngoài**
 
 - Người dùng muốn **chỉnh khoảng cách trên – dưới** giữa phần tử và các phần khác trên trang nhấn nút.
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image255_c39043c08b.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
+
 - Người dùng muốn **chỉnh khoảng cách trái – phải** của phần tử nhấn nút.
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image256_20ab92d61a.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
+
 - Nếu muốn **chỉnh riêng từng bên trái hoặc phải** ,**chỉnh riêng lề trên hoặc lề dưới**, nhấn nút.
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image257_97967f5328.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -277,28 +282,34 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
 </Frame>
 
 **Lề trong**
+
 - Người dùng muốn **chỉnh khoảng cách trên – dưới** giữa nội dung bên trong phần tử và viền của phần tử nhấn nút.
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image258_554a12da8f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
+
 - Người dùng muốn **chỉnh khoảng cách trái – phải** bên trong phần tử nhấn nút.
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image259_3375d00379.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
+
 - Nếu muốn **chỉnh riêng từng bên trái hoặc phải** ,**chỉnh riêng lề trên hoặc lề dưới**, nhấn nút.
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image260_51fb417aed.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -308,65 +319,78 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
 **Bo góc**
 
 - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của header tại ô nhập
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image261_54c7aaf6f9.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
+
 hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image262_c995264c70.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
+
 **Viền**
+
 - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của header tại ô nhập
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image268_eec0e03af2.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
+
 - Chọn màu cho viền bằng cách nhấn ô vuông sau đó chọn màu
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image269_2b4257461d.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
+
 - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
 - Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 
 **Đổ bóng**
 
 - Người dùng có thể chọn độ lớn đổ bóng của header tại ô
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image270_27c94688ac.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
+
 - Chọn màu cho đổ bóng bằng cách nhấn ô vuông sau đó chọn màu
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image271_468d26fecb.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
+
 - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
 - Xóa đồ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 
@@ -375,27 +399,32 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 **Lề ngoài**
 
 - Người dùng muốn **chỉnh khoảng cách trên – dưới** giữa phần tử và các phần khác trên trang nhấn nút.
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image272_57694a0e61.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
+
 - Người dùng muốn **chỉnh khoảng cách trái – phải** của phần tử nhấn nút.
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image273_c19d82bc9f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
+
 - Nếu muốn **chỉnh riêng từng bên trái hoặc phải** ,**chỉnh riêng lề trên hoặc lề dưới**, nhấn nút.
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image274_1a5852eabf.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -403,53 +432,56 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 </Frame>
 
 **Lề trong**
+
 - Người dùng muốn **chỉnh khoảng cách trên – dưới** giữa nội dung bên trong phần tử và viền của phần tử nhấn nút.
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image275_e94c7d2d90.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
+
 - Người dùng muốn **chỉnh khoảng cách trái – phải** bên trong phần tử nhấn nút.
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image276_e35cbd8765.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
+
 - Nếu muốn **chỉnh riêng từng bên trái hoặc phải** ,**chỉnh riêng lề trên hoặc lề dưới**, nhấn nút.
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image277_c13c76b01c.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
 
-
-**Kích thước**
-Người dùng có thể điều chỉnh kích thước cho tiêu đề của thẻ sản phẩm tại 
+**Kích thước** Người dùng có thể điều chỉnh kích thước cho tiêu đề của thẻ sản phẩm tại
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image278_7306ee5c57.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
 
-**Kiểu hình ảnh**
-Người dùng có thể chọn kiểu hình ảnh các thẻ sản phẩm tại 
+**Kiểu hình ảnh** Người dùng có thể chọn kiểu hình ảnh các thẻ sản phẩm tại
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image279_8f24d1260d.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -461,7 +493,7 @@ Người dùng có thể chọn kiểu hình ảnh các thẻ sản phẩm tại
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image280_3a362154cf.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -475,7 +507,7 @@ Người dùng có thể chọn kiểu hình ảnh các thẻ sản phẩm tại
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image281_98b2e13028.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -486,7 +518,7 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image282_98f498b01e.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -495,33 +527,35 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 
 - **Viền**
   - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của header tại ô nhập
-  
+
 <Frame caption>
   <img
-    src=""
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
-  - Chọn màu cho viền bằng cách nhấn ô vuông sau đó chọn màu
-<Frame caption>
-  <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image283_dd1752d925.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
 
-  - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-  - Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+- Chọn màu cho viền bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image284_97dcac7c7a.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 - **Đổ bóng**
   - Người dùng có thể chọn độ lớn đổ bóng của header tại ô
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image285_41fb6c40b9.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -532,7 +566,7 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image286_e2a485ccc9.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -542,44 +576,49 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 - Nhấn biểu tượng <Icon icon="eye" color="#cfcfcf" size={15} /> để ẩn hoặc hiển thị hiệu ứng bóng.
 - Xóa đồ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 
-
 **Hiển thị tên sản phẩm:**
 
 - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt các mục **Tên sản phẩm**, **Danh mục**, **Sản phẩm sale**, **Yêu thích**, **Đánh giá**, **Số lượt yêu thích**, **Số lượng đã bán** và **Giỏ hàng**.
 - Chọn kiểu hiển thị cho Giá tiền tại
+
 <Frame caption>
   <img
-    src=""
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
-- Chọn kiểu hiển thị cho Giá giảm tại 
-<Frame caption>
-  <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image287_7fc044e9ee.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
 
-- Người dùng chọn hiển thị nhãn FlashSale, Bán chạy, Mới nhất hoặc chọn ẩn nhãn tại.
+- Chọn kiểu hiển thị cho **Giá giảm** tại
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image287_7fc044e9ee.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
+
+- Người dùng chọn hiển thị nhãn **FlashSale, Bán chạy, Mới nhấ**t hoặc chọn **ẩn nhãn** tại.
+
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image288_c77772d6b2.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
 **Kiểu nút giỏ hàng:**
-  - Người dùng có thể chọn chuyển đổi hiển thị giỏ hàng giữa icon hoặc button 
+
+- Người dùng có thể chọn chuyển đổi hiển thị giỏ hàng giữa icon hoặc button
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image289_593423f22d.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -588,10 +627,11 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 
 **Kiểu thẻ sản phẩm:**
 
- - Người dùng có thể chọn chuyển đổi hiển thị sản phẩm giữa ngang hoặc dọc 
+- Người dùng có thể chọn chuyển đổi hiển thị sản phẩm giữa ngang hoặc dọc
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image290_e2ae3ad3d5.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
