Documentation edits made through Mintlify web editor

--- a/app-builder/builder/pages/flashsale-page.mdx
+++ b/app-builder/builder/pages/flashsale-page.mdx
@@ -119,7 +119,7 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image291_b940e413f3.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -141,7 +141,15 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
 </Frame>
 
 - **Kích thước/ Màu sắc:**
-  - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của flashsale tại ![][image82]
+  - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của flashsale tại
+<Frame caption="Tiêu đề Flashsale">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image292_9b3d97694a.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 **Bộ đếm giờ**
 
@@ -151,9 +159,9 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   - **Nền:**
     - Người dùng có thể điều chỉnh màu sắc cho nền bộ đếm giờ của flashsale tại
 
-<Frame caption="Bố cục Flashsale">
+<Frame caption="">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image79_46cff84d22.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image293_2c33190cae.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -163,9 +171,9 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
 - **Kích thước/ Màu sắc:**
   - Người dùng có thể điều chỉnh kích thước và màu sắc cho bộ đếm giờ của flashsale tại
 
-<Frame caption="Bố cục Flashsale">
+<Frame caption="">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image79_46cff84d22.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image294_a7ad2155ab.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -175,17 +183,67 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
 **Thẻ sản phẩm**
 
 - **Lề ngoài**
-  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút ![][image133] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image134]
-  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút ![][image135] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image136]
+  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image295_f1f9ef9213.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút  
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image296_8060b36901.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+  - Người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút 
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image297_4c5fb2f8a1.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - **Lề trong**
-  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút ![][image137] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image138]
-  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút ![][image139] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image140]
+  - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút 
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image298_38d81491c0.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút 
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image299_26093b1c7c.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />  
+</Frame>
+  Người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút 
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image300_c7162dd9a6.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - **Kích thước**
   - Người dùng có thể chọn hoặc tăng/giảm kích thước của các thẻ sản phẩm tại
 
-<Frame caption="Bố cục Flashsale">
+<Frame caption="">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image79_46cff84d22.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image301_d5c6ac9f93.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -194,30 +252,87 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
 
 **Kiểu hình ảnh** Người dùng có thể chọn kiểu hình ảnh các thẻ sản phẩm tại
 
-<Frame caption="Bố cục Flashsale">
+<Frame caption="">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image79_46cff84d22.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image302_ad617405bc.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
 
-**Nền**
+- **Nền**
 
-- Chọn màu nền cho các thẻ bằng cách nhấn ô vuông sau đó chọn màu
+ - Chọn màu nền cho các thẻ bằng cách nhấn ô vuông sau đó chọn màu
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image303_c9cd9d16ca.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
   - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
   - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 - **Bo góc**
-  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của thẻ sản phẩm tại ô nhập ![][image141] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image142]
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của thẻ sản phẩm tại ô nhập 
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image304_5ebc71f01d.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+    hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút 
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image305_5a87aa1f09.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - **Viền**
-  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của thẻ sản phẩm tại ô nhập ![][image143]
-  - Chọn màu cho viền bằng cách nhấn ô vuông ![][image144] sau đó chọn màu
-  - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút ![][image145]
-  - Xóa viền bằng cách nhấn nút ![][image146]
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của thẻ sản phẩm tại ô nhập 
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image306_4d403d53a5.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>    
+  - Chọn màu cho viền bằng cách nhấn ô vuông sau đó chọn màu
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image307_6b9592d758.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+  - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+  - Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 - **Đổ bóng**
-  - Người dùng có thể chọn độ lớn đổ bóng của thẻ sản phẩm tại ô ![][image147]
-  - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image148] sau đó chọn màu
+  - Người dùng có thể chọn độ lớn đổ bóng của thẻ sản phẩm tại ô 
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image308_9a4dc856ba.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+  - Chọn màu cho đổ bóng bằng cách nhấn ô vuông sau đó chọn màu
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image309_2ecb89c606.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
   - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
   - Xóa đổ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 - **Hiển thị tên sản phẩm:**
@@ -225,9 +340,25 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
 - **Hiển thị danh mục:**
   - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có danh mục và không có danh mục
 - **Hiển thị giá tiền:**
-  - Người dùng chọn không hiển thị giá, giá cơ bản, giá khuyến mãi hoặc tất cả tại ![][image110]
+  - Người dùng chọn không hiển thị giá, giá cơ bản, giá khuyến mãi hoặc tất cả tại 
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image310_65d80f7244.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - **Hiển thị giá giảm:**
-  - Người dùng chọn hiển thị giá giảm theo phần trăm hay giá gốc ![][image111]
+  - Người dùng chọn hiển thị giá giảm theo phần trăm hay giá gốc 
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image311_e577d11b00.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - **Sản phẩm Sale:**
   - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có sản phẩm sale và không có sản phẩm sale
 - **Hiển thị nhãn:**
@@ -249,7 +380,7 @@ Người dùng có thể chọn chuyển đổi hiển thị giỏ hàng giữa 
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image312_ddc56a614b.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
