Documentation edits made through Mintlify web editor

--- a/app-builder/builder/pages/payment-page.mdx
+++ b/app-builder/builder/pages/payment-page.mdx
@@ -10,7 +10,15 @@ icon: "circle-user"
 
 **Nền**
 
-- Chọn màu nền cho tiêu đề bằng cách nhấn ô vuông <Icon icon="minus" color="#cfcfcf" size={15} /> sau đó chọn màu
+- Chọn màu nền cho tiêu đề bằng cách nhấn ô vuông sau đó chọn màu
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image364_867ed11b33.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
   - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
     - Xóa màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
   - **Hiển thị tiêu đề:**
@@ -26,7 +34,15 @@ icon: "circle-user"
 </Frame>
 
 - **Kích thước/ Màu sắc**:
-  - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần thanh toán tại ![][image125]
+  - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần thanh toán tại 
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image365_83d16e2dee.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
   **Tổng quan**
 
